# recursive-coder

./: .env.example  .gitignore  AGENTS.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_FILES.md  QUICKSTART.md  README.md  START_HERE.md  code_agent_integration.py  complete_example.py  config.py  config_template.py  custom_model.py  example_usage.py  logger.py  project_setup.py  prompt.md  pyproject.toml  recursive_agent.py  run.py  run_code_agent.py  validate.py
_reference/: smolagents-api.md
