[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-coder"
version = "0.1.0"
description = "Recursive code agent using SmolAgents CodeAgent for hierarchical task decomposition and code generation"
requires-python = ">=3.10"
authors = [
    {name = "Recursive Coder", email = "dev@recursive-coder.local"}
]

dependencies = [
    "pytest>=7.0",
    "pytest-timeout>=2.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
smol = [
    "smolagents[toolkit,transformers]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
