[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-coder"
version = "0.2.0"
description = "Prompt-driven recursive code agent using SmolAgents CodeAgent"
requires-python = ">=3.10"
authors = [
    {name = "Recursive Coder", email = "dev@recursive-coder.local"}
]

dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
smol = [
    "smolagents[toolkit,transformers]",
    "torch",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["agents"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
